test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_procedure_open_array.draco

proc main([*] word a) void : a := 0; corp;

