test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_procedure_nested_open_array.draco

proc main([*] [*] int ar) int : a := 0; corp;

